--- a/discont/Cells/SportAndEntrtainmentCell/SportAndEntrtainmentCell.xib
+++ b/discont/Cells/SportAndEntrtainmentCell/SportAndEntrtainmentCell.xib
@@ -4,12 +4,13 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="107" id="KGk-i7-Jjw" customClass="SportAndEntrtainmentCell" customModule="discont" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="107" id="KGk-i7-Jjw" customClass="SportAndEntrtainmentCell" customModule="discont" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="349" height="107"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XVx-c5-ZUO">
-                        <rect key="frame" x="2" y="2" width="345" height="103"/>
+                        <rect key="frame" x="5" y="5" width="339" height="97"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5ap-Yf-bb1" customClass="FAShimmerImageView" customModule="discont" customModuleProvider="target">
                                 <rect key="frame" x="20" y="20" width="100" height="58"/>
@@ -26,49 +27,68 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="udb-L2-EEF">
-                                <rect key="frame" x="125" y="20" width="200" height="63"/>
+                                <rect key="frame" x="125" y="20" width="194" height="57"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="               " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVw-vf-uw2" customClass="FAShimmerLabelView" customModule="discont" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="46"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="194" height="40"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="                                                                           " lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOy-Pi-0Ru" customClass="FAShimmerLabelView" customModule="discont" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="51" width="200" height="12"/>
+                                        <rect key="frame" x="0.0" y="45" width="194" height="12"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lft-MC-xj6" customClass="FAShimmerView" customModule="discont" customModuleProvider="target">
+                                <rect key="frame" x="20" y="13.5" width="100" height="70"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="CFW-Q4-d32"/>
+                                    <constraint firstAttribute="width" constant="100" id="YOW-JK-O1f"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Lft-MC-xj6" firstAttribute="centerY" secondItem="udb-L2-EEF" secondAttribute="centerY" id="K1L-UK-MX6"/>
                             <constraint firstItem="udb-L2-EEF" firstAttribute="top" secondItem="XVx-c5-ZUO" secondAttribute="top" constant="20" id="PHI-QF-s5l"/>
                             <constraint firstAttribute="bottom" secondItem="udb-L2-EEF" secondAttribute="bottom" constant="20" id="UvM-3b-95E"/>
                             <constraint firstItem="5ap-Yf-bb1" firstAttribute="centerY" secondItem="udb-L2-EEF" secondAttribute="centerY" id="XsU-Bm-ZL6"/>
+                            <constraint firstItem="udb-L2-EEF" firstAttribute="leading" secondItem="Lft-MC-xj6" secondAttribute="trailing" constant="5" id="cMz-eQ-dxg"/>
                             <constraint firstItem="udb-L2-EEF" firstAttribute="leading" secondItem="5ap-Yf-bb1" secondAttribute="trailing" constant="5" id="mOt-t0-938"/>
                             <constraint firstAttribute="trailing" secondItem="udb-L2-EEF" secondAttribute="trailing" constant="20" id="pVV-so-fnK"/>
                             <constraint firstItem="5ap-Yf-bb1" firstAttribute="leading" secondItem="XVx-c5-ZUO" secondAttribute="leading" constant="20" id="pz6-Ha-TxF"/>
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="XVx-c5-ZUO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="BgP-WX-cs5"/>
-                    <constraint firstAttribute="bottom" secondItem="XVx-c5-ZUO" secondAttribute="bottom" constant="2" id="FBf-g0-t2S"/>
-                    <constraint firstItem="XVx-c5-ZUO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="2" id="cjd-jb-1pn"/>
-                    <constraint firstAttribute="trailing" secondItem="XVx-c5-ZUO" secondAttribute="trailing" constant="2" id="ybx-1b-goA"/>
+                    <constraint firstItem="XVx-c5-ZUO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="BgP-WX-cs5"/>
+                    <constraint firstAttribute="bottom" secondItem="XVx-c5-ZUO" secondAttribute="bottom" constant="5" id="FBf-g0-t2S"/>
+                    <constraint firstItem="XVx-c5-ZUO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="cjd-jb-1pn"/>
+                    <constraint firstAttribute="trailing" secondItem="XVx-c5-ZUO" secondAttribute="trailing" constant="5" id="ybx-1b-goA"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="background" destination="XVx-c5-ZUO" id="UYl-Ba-zN2"/>
                 <outlet property="cellDescription" destination="EOy-Pi-0Ru" id="ZUh-0h-WKV"/>
                 <outlet property="cellImage" destination="5ap-Yf-bb1" id="jHH-fk-NWV"/>
+                <outlet property="imageShimmerView" destination="Lft-MC-xj6" id="MRe-kd-yuK"/>
                 <outlet property="title" destination="PVw-vf-uw2" id="nXi-WZ-n6a"/>
             </connections>
-            <point key="canvasLocation" x="152.89855072463769" y="126.89732142857142"/>
+            <point key="canvasLocation" x="18.115942028985508" y="112.16517857142857"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
