--- a/discont/Cells/TravelCell/TravelCell.xib
+++ b/discont/Cells/TravelCell/TravelCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,19 +16,19 @@
                 <rect key="frame" x="0.0" y="0.0" width="219" height="126"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="                            " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrF-mX-P1I" customClass="FAShimmerLabelView" customModule="discont" customModuleProvider="target">
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="                            " lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrF-mX-P1I" customClass="FAShimmerLabelView" customModule="discont" customModuleProvider="target">
                         <rect key="frame" x="5" y="105" width="209" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                     </label>
-                    <view clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qgO-15-UEq">
-                        <rect key="frame" x="100.5" y="5" width="18" height="85"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgO-15-UEq">
+                        <rect key="frame" x="5" y="5" width="209" height="85"/>
                         <subviews>
-                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1f7-Kv-Gy5" customClass="FAShimmerImageView" customModule="discont" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="18" height="85"/>
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1f7-Kv-Gy5" customClass="FAShimmerImageView" customModule="discont" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="209" height="85"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="1f7-Kv-Gy5" secondAttribute="bottom" id="Rjx-jP-Xhg"/>
                             <constraint firstItem="1f7-Kv-Gy5" firstAttribute="top" secondItem="qgO-15-UEq" secondAttribute="top" id="kIr-On-c0I"/>
@@ -45,8 +44,11 @@
                 <constraint firstItem="XrF-mX-P1I" firstAttribute="top" secondItem="qgO-15-UEq" secondAttribute="bottom" constant="15" id="0EZ-iL-lrT"/>
                 <constraint firstItem="qgO-15-UEq" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="0fg-hT-d8q"/>
                 <constraint firstItem="XrF-mX-P1I" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="8kb-8H-MOx"/>
+                <constraint firstItem="qgO-15-UEq" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="c9j-jU-L57"/>
                 <constraint firstAttribute="bottom" secondItem="XrF-mX-P1I" secondAttribute="bottom" constant="5" id="h2A-6q-eCv"/>
+                <constraint firstItem="qgO-15-UEq" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="iGw-nI-Hye"/>
                 <constraint firstAttribute="trailing" secondItem="XrF-mX-P1I" secondAttribute="trailing" constant="5" id="jIL-Ci-olZ"/>
+                <constraint firstAttribute="trailing" secondItem="qgO-15-UEq" secondAttribute="trailing" constant="5" id="p4B-9z-z2A"/>
                 <constraint firstItem="qgO-15-UEq" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="tfp-2e-RBP"/>
             </constraints>
             <size key="customSize" width="219" height="126"/>
@@ -54,12 +56,7 @@
                 <outlet property="title" destination="XrF-mX-P1I" id="qLD-LD-ZZG"/>
                 <outlet property="travelImage" destination="1f7-Kv-Gy5" id="baO-RY-H5w"/>
             </connections>
-            <point key="canvasLocation" x="170.28985507246378" y="300.66964285714283"/>
+            <point key="canvasLocation" x="139.85507246376812" y="279.91071428571428"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
